// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`memory panel snapshots > renders the closed drawer as nothing and the open drawer with the vault listing > memory-panel-closed 1`] = `
<div
  data-slot="shell.overlay"
  style="display: contents;"
/>
`;

exports[`memory panel snapshots > renders the closed drawer as nothing and the open drawer with the vault listing > memory-panel-list 1`] = `
<div
  data-slot="shell.overlay"
  style="display: contents;"
>
  <div
    class="layer"
  >
    <div
      aria-hidden="true"
      class="backdrop"
    />
    <aside
      aria-label="记忆"
      class="drawer"
    >
      <header
        class="header"
      >
        <h2
          class="title"
        >
          记忆
        </h2>
        <button
          aria-label="关闭记忆面板"
          class="button ghost sm"
          type="button"
        >
          <span
            class="icon"
          >
            <svg
              data-content="b94f78dd"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </button>
      </header>
      <div
        class="tabsRow"
      >
        <div
          aria-label="记忆"
          class="tabs"
          role="tablist"
        >
          <button
            aria-selected="true"
            class="pill interactive active"
            role="tab"
            type="button"
          >
            全局
          </button>
          <button
            aria-selected="false"
            class="pill interactive"
            role="tab"
            type="button"
          >
            项目
          </button>
        </div>
      </div>
      <div
        class="toolbar"
      >
        <input
          class="search"
          placeholder="搜索当前记忆库"
          type="search"
          value=""
        />
        <button
          aria-label="刷新"
          class="button ghost sm"
          type="button"
        >
          <span
            class="icon"
          >
            <svg
              data-content="c9f0c49b"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </button>
      </div>
      <ul
        class="list"
      >
        <li
          class="row"
        >
          <button
            class="rowMain"
            type="button"
          >
            <span
              class="rowTitle"
            >
              关于用户
              <span
                class="badge"
              >
                个人档案
              </span>
            </span>
            <span
              class="rowMeta"
            >
              <span
                class="tags"
              />
              <span
                class="time"
              >
                刚刚
              </span>
            </span>
          </button>
        </li>
        <li
          class="row"
        >
          <button
            class="rowMain"
            type="button"
          >
            <span
              class="rowTitle"
            >
              咖啡偏好
            </span>
            <span
              class="rowMeta"
            >
              <span
                class="tags"
              >
                <span
                  class="pill tag"
                >
                  身份
                </span>
                <span
                  class="pill tag"
                >
                  偏好
                </span>
              </span>
              <span
                class="time"
              >
                刚刚
              </span>
            </span>
          </button>
        </li>
      </ul>
    </aside>
  </div>
</div>
`;

exports[`memory panel snapshots > renders the read view with backlinks and wikilink mentions > memory-panel-note 1`] = `
<div
  data-slot="shell.overlay"
  style="display: contents;"
>
  <div
    class="layer"
  >
    <div
      aria-hidden="true"
      class="backdrop"
    />
    <aside
      aria-label="记忆"
      class="drawer"
    >
      <header
        class="header"
      >
        <h2
          class="title"
        >
          记忆
        </h2>
        <button
          aria-label="关闭记忆面板"
          class="button ghost sm"
          type="button"
        >
          <span
            class="icon"
          >
            <svg
              data-content="b94f78dd"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </button>
      </header>
      <div
        class="tabsRow"
      >
        <div
          aria-label="记忆"
          class="tabs"
          role="tablist"
        >
          <button
            aria-selected="true"
            class="pill interactive active"
            role="tab"
            type="button"
          >
            全局
          </button>
          <button
            aria-selected="false"
            class="pill interactive"
            role="tab"
            type="button"
          >
            项目
          </button>
        </div>
      </div>
      <div
        class="toolbar"
      >
        <input
          class="search"
          placeholder="搜索当前记忆库"
          type="search"
          value=""
        />
        <button
          aria-label="刷新"
          class="button ghost sm"
          type="button"
        >
          <span
            class="icon"
          >
            <svg
              data-content="c9f0c49b"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </button>
      </div>
      <div
        class="detailRoot"
      >
        <div
          class="detailBar"
        >
          <button
            class="button ghost sm"
            type="button"
          >
            返回列表
          </button>
        </div>
        <div
          class="detail"
        >
          <header
            class="detailHeader"
          >
            <h3
              class="detailTitle"
            >
              咖啡偏好
            </h3>
            <div
              class="detailActions"
            >
              <button
                class="button ghost sm"
                type="button"
              >
                <span
                  class="icon"
                >
                  <svg
                    data-content="80a2f989"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </span>
                编辑
              </button>
              <button
                class="button ghost sm"
                type="button"
              >
                <span
                  class="icon"
                >
                  <svg
                    data-content="d9dc2791"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </span>
                删除
              </button>
            </div>
          </header>
          <div
            class="detailTags"
          >
            <span
              class="pill tag"
            >
              身份
            </span>
            <span
              class="pill tag"
            >
              偏好
            </span>
          </div>
          <div
            class="body"
          >
            <div
              class="markdown"
            >
              <p>
                用户偏好手冲咖啡。
              </p>


              <p>
                参见
                <code>
                  <button
                    aria-label="咖啡设备"
                    class="fileMention"
                    title="咖啡设备"
                    type="button"
                  >
                    wl:0
                  </button>
                </code>
                。
              </p>
            </div>
          </div>
          <div
            class="links"
          >
            <section
              class="linkColumn"
            >
              <h4
                class="linkHeading"
              >
                反向链接
              </h4>
              <ul
                class="linkList"
              >
                <li>
                  <button
                    class="linkButton"
                    type="button"
                  >
                    咖啡设备
                  </button>
                </li>
              </ul>
            </section>
            <section
              class="linkColumn"
            >
              <h4
                class="linkHeading"
              >
                相关笔记
              </h4>
              <ul
                class="linkList"
              >
                <li>
                  <button
                    class="linkButton"
                    type="button"
                  >
                    咖啡设备
                  </button>
                </li>
              </ul>
            </section>
          </div>
        </div>
      </div>
    </aside>
  </div>
</div>
`;

exports[`memory panel snapshots > renders the settings card through the keyed plugin-item slot > memory-settings-card 1`] = `
<div>
  <div
    data-slot="root"
    style="display: contents;"
  >
    <div
      data-slot="settings.plugin.item"
      style="display: contents;"
    >
      <section
        class="card"
      >
        <header
          class="head"
        >
          <h3
            class="title"
          >
            记忆
          </h3>
          <p
            class="description"
          >
            自动记忆生命周期的用户设置。改动立即生效。
          </p>
        </header>
        <div
          class="toggleRow"
        >
          <label
            class="toggle"
          >
            <input
              checked=""
              type="checkbox"
            />
            <span>
              <span
                class="fieldLabel"
              >
                自动蒸馏
              </span>
              <span
                class="fieldHint"
              >
                每轮结束后把新事实蒸馏进记忆笔记
              </span>
            </span>
          </label>
        </div>
        <div
          class="field"
        >
          <label
            class="fieldHead"
            for="memory-settings-mode"
          >
            <span
              class="fieldLabel"
            >
              蒸馏模式
            </span>
            <span
              class="fieldHint"
            >
              选择固定的蒸馏指令，两者都会在模型可见文本中固定
            </span>
          </label>
          <select
            class="input"
            id="memory-settings-mode"
          >
            <option
              value="concise"
            >
              简洁
            </option>
            <option
              value="detailed"
            >
              详细
            </option>
          </select>
        </div>
        <div
          class="field"
        >
          <label
            class="fieldHead"
            for="memory-settings-min-turn"
          >
            <span
              class="fieldLabel"
            >
              最少轮次字符数
            </span>
            <span
              class="fieldHint"
            >
              低于此字符数的轮次不蒸馏
            </span>
          </label>
          <div
            class="fieldRow"
          >
            <input
              class="input"
              id="memory-settings-min-turn"
              inputmode="numeric"
              type="text"
              value="40"
            />
          </div>
        </div>
        <div
          class="field"
        >
          <label
            class="fieldHead"
            for="memory-settings-max-inject"
          >
            <span
              class="fieldLabel"
            >
              注入上限（字节）
            </span>
            <span
              class="fieldHint"
            >
              会话开始时注入上下文的 UTF-8 字节上限
            </span>
          </label>
          <div
            class="fieldRow"
          >
            <input
              class="input"
              id="memory-settings-max-inject"
              inputmode="numeric"
              type="text"
              value="16384"
            />
          </div>
        </div>
        <div
          class="field"
        >
          <label
            class="fieldHead"
            for="memory-settings-max-review"
          >
            <span
              class="fieldLabel"
            >
              回顾候选上限
            </span>
            <span
              class="fieldHint"
            >
              一次 /memory-review 提议的升级候选数量上限
            </span>
          </label>
          <div
            class="fieldRow"
          >
            <input
              class="input"
              id="memory-settings-max-review"
              inputmode="numeric"
              type="text"
              value="5"
            />
          </div>
        </div>
        <div
          class="field"
        >
          <label
            class="fieldHead"
            for="memory-settings-review-days"
          >
            <span
              class="fieldLabel"
            >
              回顾天数
            </span>
            <span
              class="fieldHint"
            >
              笔记超过该天数未更新时在面板中显示回顾标记
            </span>
          </label>
          <div
            class="fieldRow"
          >
            <input
              class="input"
              id="memory-settings-review-days"
              inputmode="numeric"
              type="text"
              value="30"
            />
          </div>
        </div>
        <div
          class="field"
        >
          <span
            class="fieldHead"
          >
            <span
              class="fieldLabel"
            >
              全局记忆库目录
            </span>
          </span>
          <span
            class="dir"
          >
            G:/vault
          </span>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`memory panel snapshots > shows the provider-missing banner when the host has no storage provider > memory-panel-provider-missing 1`] = `
<div
  data-slot="shell.overlay"
  style="display: contents;"
>
  <div
    class="layer"
  >
    <div
      aria-hidden="true"
      class="backdrop"
    />
    <aside
      aria-label="记忆"
      class="drawer"
    >
      <header
        class="header"
      >
        <h2
          class="title"
        >
          记忆
        </h2>
        <button
          aria-label="关闭记忆面板"
          class="button ghost sm"
          type="button"
        >
          <span
            class="icon"
          >
            <svg
              data-content="b94f78dd"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </button>
      </header>
      <div
        class="tabsRow"
      >
        <div
          aria-label="记忆"
          class="tabs"
          role="tablist"
        >
          <button
            aria-selected="true"
            class="pill interactive active"
            role="tab"
            type="button"
          >
            全局
          </button>
          <button
            aria-selected="false"
            class="pill interactive"
            role="tab"
            type="button"
          >
            项目
          </button>
        </div>
      </div>
      <div
        class="toolbar"
      >
        <input
          class="search"
          placeholder="搜索当前记忆库"
          type="search"
          value=""
        />
        <button
          aria-label="刷新"
          class="button ghost sm"
          type="button"
        >
          <span
            class="icon"
          >
            <svg
              data-content="c9f0c49b"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </button>
      </div>
      <p
        class="banner"
      >
        未挂载记忆存储提供方：主机组合缺少本地存储提供方，面板无法读写笔记。
      </p>
    </aside>
  </div>
</div>
`;
